    on NetBSD/Solaris platforms. (David Carlier)
  . Fixed pcntl_signal() signal table registering the callback first
    OS-wise before the internal list. (David Carlier)
  . Fixed pcntl_signal_dispatch() stale pointer and exception
    handling. (David Carlier)

- PCRE:
  . Fixed preg_match memory leak with invalid regexes. (David Carlier)

- PDO_PGSQL:
  . Fixed bug GH-21055 (connection attribute status typo for GSS negotiation).
    (lsaos)

- PGSQL:
  . Fixed bug GH-21162 (pg_connect() memory leak on error).
    (David Carlier)

- Sockets:
  . Fixed bug GH-21161 (socket_set_option() crash with array 'addr'
    entry as null). (David Carlier)
  . Fixed possible addr length overflow with socket_connect() and AF_UNIX
    family sockets. (David Carlier)

- Windows:
  . Fixed compilation with clang (missing intrin.h include). (Kévin Dunglas)

12 Feb 2026, PHP 8.4.18

- Core:
  . Fixed bug GH-20837 (NULL dereference when calling ob_start() in shutdown
    function triggered by bailout in php_output_lock_error()). (timwolla)
  . Fix OSS-Fuzz #471533782 (Infinite loop in GC destructor fiber). (ilutov)
  . Fix OSS-Fuzz #472563272 (Borked block_pass JMP[N]Z optimization). (ilutov)
  . Fixed bug GH-GH-20914 (Internal enums can be cloned and compared). (Arnaud)
  . Fix OSS-Fuzz #474613951 (Leaked parent property default value). (ilutov)
  . Fixed bug GH-20766 (Use-after-free in FE_FREE with GC interaction). (Bob)
  . Fix OSS-Fuzz #471486164 (Broken by-ref assignment to uninitialized hooked
    backing value). (ilutov)
  . Fix OSS-Fuzz #438780145 (Nested finally with repeated return type check may
    uaf). (ilutov)
  . Fixed bug GH-20905 (Lazy proxy bailing __clone assertion). (ilutov)
  . Fixed bug GH-20479 (Hooked object properties overflow). (ndossche)

- Date:
  . Update timelib to 2022.16. (Derick)

- DOM:
  . Fixed GH-21041 (Dom\HTMLDocument corrupts closing tags within scripts).
    (lexborisov)

- MbString: